@@ -1,6 +1,8 @@
 WebHelpers ChangeLog
 
 0.2.1 (**svn**)
+* More precise distance_of_time_in_words (Follows bottom half of #4989 Rails
+  changeset)
 * button_to accepts method keyword so you can PUT and DELETE with it. 
   (Follows #4914 Rails changeset)
 * Fixed auto_link to parse more valid url formats (Thanks Jamie Wilkinson).
